--- a/index.html
+++ b/index.html
@@ -15,11 +15,11 @@
 
             </div>
             <div class="content">
-                <select name="select" id="my-select" class="selec-fig style-of-slect">
-                    <option value="figure" selected>Выберите фигуру</option>
-                    <option value="figure-1" class="opt-1">Квадрат</option>
-                    <option value="figure-2" class="opt-2">Прямоугольник</option>
-                    <option value="figure-3" class="opt-3">Круг</option>
+                <select name="select" id="my-select" class="style-of-slect">
+                    <option value="figure" disabled selected>Виберети фигуру</option>
+                    <option value="figure1-square" >Квадрат</option>
+                    <option value="figure2-rectangle" >Прямоугольник</option>
+                    <option value="figure3-circle" >Круг</option>
                 </select>
             
                 <input type="text" id="inputColor" class="style-of-input" placeholder="Введите название цвета"> 
