--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
             </div>
             <div class="content">
                 <select name="select" id="my-select" class="style-of-slect">
-                    <option value="figure" disabled selected>Виберети фигуру</option>
+                    <option value="figure" disabled selected>Виберите фигуру</option>
                     <option value="figure1-square" >Квадрат</option>
                     <option value="figure2-rectangle" >Прямоугольник</option>
                     <option value="figure3-circle" >Круг</option>
